set up, first migration and seed working

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
-    "migrateh": "heroku run knex migrate:latest -a potluckplan",
-    "rollbackh": "heroku run knex migrate:rollback -a potluckplan",
-    "databaseh": "heroku pg:psql -a potluckplan",
-    "seedh": "heroku run knex seed:run -a potluckplan",
+    "migrateh": "heroku run knex migrate:latest -a sucsandsched",
+    "rollbackh": "heroku run knex migrate:rollback -a sucsandsched",
+    "databaseh": "heroku pg:psql -a sucsandsched",
+    "seedh": "heroku run knex seed:run -a sucsandsched",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
     "deploy": "git push heroku main"
   },
