--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bloominstituteoftechnology/build-week-scaffolding-node.git"
+    "url": "git+https://github.com/bbellify/sucsandsched-backend"
   }
 }
